# T-MITS

./: .gitignore  CITATION.cff  LICENSE  README.md  config.py  culling_reg.py  eval_kfold_TMITS.py  kfold_TMITS.py  preprocess_eicu.py  preprocess_mimic.py  pyproject.toml
dataset_classes/: dataset_base.py  dataset_regression.py
models/: UD.py  attention.py  loss.py  tmits.py  transformer.py
results/29/: T_MITS_config.json  T_MITS_test_idx_3.npy  T_MITS_test_idx_4.npy  T_MITS_train_idx_0.npy  T_MITS_train_idx_2.npy  T_MITS_train_idx_4.npy  metrics_test.csv  true_pred_values_test_0.xlsx  true_pred_values_test_1.xlsx  true_pred_values_test_2.xlsx  true_pred_values_test_3.xlsx  true_pred_values_test_4.xlsx
results/29-SCr/: T_MITS_config.json  T_MITS_test_idx_0.npy  T_MITS_test_idx_1.npy  T_MITS_test_idx_2.npy  T_MITS_train_idx_1.npy  T_MITS_train_idx_3.npy  metrics_test.csv  true_pred_values_test_0.xlsx  true_pred_values_test_1.xlsx  true_pred_values_test_2.xlsx  true_pred_values_test_3.xlsx  true_pred_values_test_4.xlsx
results/29-SCr/arrays/: y_pred_test_fold0.npy  y_pred_test_fold1.npy  y_pred_test_fold2.npy  y_pred_test_fold3.npy  y_pred_test_fold4.npy  y_true_test_fold0.npy  y_true_test_fold1.npy  y_true_test_fold4.npy
results/29-SCr/arrays_classif/: y_pred_test_fold0.npy  y_pred_test_fold1.npy  y_pred_test_fold2.npy  y_pred_test_fold3.npy  y_pred_test_fold4.npy  y_true_test_fold0.npy  y_true_test_fold1.npy
results/29/arrays/: y_pred_test_fold0.npy  y_pred_test_fold1.npy  (+5 more)
utility_functions/: eval_utils.py  preprocessing_utils.py  utils.py
(+8 files in other folders)
